--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       MYSQL_DATABASE: myshop
       MYSQL_USER: root
       MYSQL_PASSWORD: Sandonaci94
+    ports:
+      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
     networks:
